# smart-inventory

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.atl/: skill-registry.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
apps/api/: .eslintrc.cjs  Dockerfile  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/drizzle/: 0000_fixed_supernaut.sql  0001_stock_movements.sql
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: app.ts  server.ts
apps/api/src/adapters/: db.ts  logger.ts  sentry.ts
apps/api/src/config/: env.ts
apps/api/src/controllers/: auth.controller.ts  movements.controller.ts  products.controller.ts
apps/api/src/lib/: errors.ts  jwt.ts  password.ts
apps/api/src/middleware/: auth.ts  error.ts  health.ts  validate.ts
apps/api/src/repositories/: movements.repository.ts  products.repository.ts  users.repository.ts
apps/api/src/routes/: auth.routes.ts  products.routes.ts
apps/api/src/scripts/: migrate.ts  seed-products.ts  (+1 more)
apps/api/tests/: health.test.ts  setup.ts
apps/ml/: Dockerfile  README.md  pyproject.toml
apps/ml/app/: main.py
apps/ml/tests/: test_health.py
apps/web/: middleware.ts  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: login-hero.tsx  navbar.tsx  page-transition.tsx  product-form.tsx
apps/web/lib/: cn.ts  env.ts
docker/postgres/: init.sql
docs/: PRD.md
(+40 files in other folders)
